# py-tdd-template

./: README.md  pyproject.toml
app/: __init__.py
tests/: test_app.py  test_py_tdd_template.py
