[tool.poetry]
name = "py-tdd-template"
version = "0.1.0"
description = "Python Test-Driven Development Template"
authors = ["Liam Mulhall <mail@liammulhall.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pylint = "^2.14.3"
autohooks = "^21.7.0"
autohooks-plugin-black = "^21.12.0"
autohooks-plugin-pylint = "^21.6.0"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.pylint"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
